Fix file loading for headers with space before asterisk and downgrade to Java 17
Co-authored-by: Bussyny-boop <239534501+Bussyny-boop@users.noreply.github.com>